--- a/configs/sionna_hallway_focus_ma.yaml
+++ b/configs/sionna_hallway_focus_ma.yaml
@@ -41,7 +41,8 @@ rx_vertical_spacing: 0.5
 rx_horizontal_spacing: 0.5
 rx_pattern: iso
 rx_polarization: V
-rx_positions: [[-10.1, -2.75, 1.5], [-11.1, -3.25, 1.5], [-8.1, -4.25, 1.5]]
+rx_positions:
+    [[-2.2778, -6.1500, 1.5], [-3.2009, -5.1310, 1.5], [-0.4061, -4.7465, 1.5]]
 rx_orientations: [[0.0, 0.0, 0.0], [0.0, 0.0, 0.0], [0.0, 0.0, 0.0]]
 
 # Path tracing parameters
